test/error/forgprep2.luau
local it = 69

for i, v in next, it do
	print(i, v)
end
